# Proyecto-No2-EDD

./: .gitignore  CMakeLists.txt  README.md  build.sh  recursos.qrc
archivos/: conexionesPrueba.csv  productosErrores.csv  productosProyectoCorto.csv  productosProyectoLargo.csv  productosProyectoMedio.csv  productosSucursal.csv  productosSucursales.csv
documentacion/: Diagrama-Clases-ProyectoNo1.drawio.xml  Diagrama-Clases-ProyectoNo2.xml
documentacion/ArbolesGenerados/: ArbolAVLGrafica  ArbolAVLGrafica.dot  ArbolBGrafica  ArbolBGrafica.dot  ArbolBMasGraficado  ArbolBMasGraficado.dot  GrafoSucursalesGrafica  GrafoSucursalesGrafica.dot  ListaEnlazadaGrafica  ListaEnlazadaGrafica.dot  TablaHashGrafica  TablaHashGrafica.dot
include/backend/: arbolavl.h  arbolb.h  arbolbmas.h  cola.h  conexion.h  erroreslectura.h  gestorenvios.h  gestorestructuras.h  gestormapa.h  grafo.h  historialenvio.h  listaenlazada.h  nodoavl.h  nodob.h  nodobmas.h  nodocola.h  nodolista.h  producto.h  sucursal.h  tablahash.h
include/controladores/: controlador.h  controladornegocio.h  controladorsucursal.h
include/exceptions/: deleteexception.h  insertexception.h  notfoundexception.h  readercsvexception.h
include/frontend/: controlador.h  controladornegocio.h  eliminarproducto.h  mainwindow.h  pantallaagregar.h  pantallaarbolb.h  pantallabuscarporcategoria.h  pantallacompararbusqueda.h  pantallaeliminarproducto.h  pantallagestion.h  pantallalistarnombre.h  pantallamain.h  pantallasistema.h  pantallasucursal.h  pantallaverarboles.h
include/frontend/inicio/: pantallaagregarsucursal.h  pantallacargaenvios.h  pantallacargaproductos.h  pantallacargasucursales.h  pantallaeliminarsucursal.h  pantallamodificarsucursal.h  pantallaverenvios.h  pantallaversucursales.h
include/frontend/manejo/: pantallacolaingreso.h  pantallacolapreparacion.h  pantallacolasalida.h  pantalladetallessucursal.h  pantallaenviarproductos.h  pantallahistorialenvios.h  pantallaverestadoenvios.h
include/frontend/sucursales/: graphicsviewzoom.h  pantallaagregar.h  pantallaarbolavl.h  pantallaarbolbmas.h  pantallabuscarcodigo.h  pantallabuscarpornombre.h  pantallabuscarrango.h  pantallacompararbusquedas.h  pantallaeliminarproducto.h  pantallalistaenlazada.h  pantallaprincipal.h  pantallatablahash.h  pantallaverarboles.h
include/modules/: nodografico.h
src/backend/: arbolavl.cpp  arbolb.cpp  arbolbmas.cpp  cola.cpp  conexion.cpp  erroreslectura.cpp  gestorenvios.cpp  gestorestructuras.cpp  gestormapa.cpp  grafo.cpp  historialenvio.cpp  listaenlazada.cpp  nodoavl.cpp  nodob.cpp  nodobmas.cpp  nodocola.cpp  nodolista.cpp  producto.cpp  sucursal.cpp  tablahash.cpp
src/controladores/: controlador.cpp  controladornegocio.cpp  controladorsucursal.cpp
src/exceptions/: deleteexception.cpp  insertexception.cpp  notfoundexception.cpp  readercsvexception.cpp
src/frontend/: controlador.cpp  controladornegocio.cpp  eliminarproducto.cpp  mainwindow.cpp  pantallaagregar.cpp  pantallaarbolavl.cpp  pantallaarbolb.cpp  pantallaarbolbmas.cpp  pantallabuscarporcategoria.cpp  pantallabuscarpornombre.cpp  pantallabuscarrango.cpp  pantallacompararbusqueda.cpp  pantallaeliminarproducto.cpp  pantallagestion.cpp  pantallamain.cpp  pantallaprincipal.cpp  pantallasistema.cpp  pantallasucursal.cpp  pantallaverarboles.cpp
src/frontend/inicio/: pantallaagregarsucursal.cpp  pantallacargaenvios.cpp  pantallacargaproductos.cpp  pantallacargasucursales.cpp  pantallaeliminarsucursal.cpp  pantallamodificarsucursal.cpp  pantallaverenvios.cpp  pantallaversucursales.cpp
src/frontend/manejo/: pantallacolaingreso.cpp  pantallacolapreparacion.cpp  pantallacolasalida.cpp  pantalladetallessucursal.cpp  pantallaenviarproductos.cpp  pantallahistorialenvios.cpp  pantallaverestadoenvios.cpp
src/frontend/sucursales/: graphicsviewzoom.cpp  pantallaagregar.cpp  pantallaarbolavl.cpp  pantallaarbolb.cpp  pantallaarbolbmas.cpp  pantallabuscarcodigo.cpp  pantallacompararbusquedas.cpp  pantallaeliminarproducto.cpp  pantallalistaenlazada.cpp  pantallalistarnombre.cpp  pantallaprincipal.cpp  pantallatablahash.cpp  pantallaverarboles.cpp
src/modules/: nodografico.cpp
ui/: mainwindow.ui  pantallaagregar.ui  pantallaarbolbmas.ui  pantallabuscarporcategoria.ui  pantallabuscarpornombre.ui  pantallabuscarporrango.ui  pantallabuscarrango.ui  pantallaeliminarproducto.ui  pantallagestion.ui  pantallamain.ui  pantallaprincipal.ui  pantallasistema.ui  pantallasucursal.ui  pantallaverarboles.ui
ui/inicio/: pantallaagregarsucursal.ui  pantallacargaenvios.ui  pantallacargaproductos.ui  pantallacargasucursales.ui  pantallaeliminarsucursal.ui  pantallamodificarsucursal.ui  pantallaverenvios.ui  pantallaversucursales.ui
ui/manejo/: pantallacolaingreso.ui  pantallacolapreparacion.ui  pantallacolasalida.ui  pantalladetallessucursal.ui  pantallaenviarproductos.ui  pantallahistorialenvios.ui  pantallaverestadoenvios.ui
ui/sucursales/: pantallaagregar.ui  pantallaarbolavl.ui  pantallaarbolb.ui  pantallabuscarcodigo.ui  pantallabuscarpornombre.ui  pantallacompararbusqueda.ui  pantallacompararbusquedas.ui  pantallaeliminarproducto.ui  pantallalistaenlazada.ui  pantallalistarnombre.ui  pantallatablahash.ui
